validacion__archivo_tabla_crud

--- a/templates/crud_cotizador.html
+++ b/templates/crud_cotizador.html
@@ -188,171 +188,41 @@
 
         
         <div class="crud">
-            <table  id="example" class="display" style="width:100%">
-                <thead>
-                      <!--definir mis campos para el crud (nombre , direccion , email, Sistema_descripcion,fecha , estado , opciones )-->
-                    <tr>
-                        <th name="nombre">Nombre_Cliente</th>
-                        <th name="email">Email_Cliente</th>
-                        <th name="direccion">Direccion</th>
-                        <th name="descripcion">Sistema_Descripcion</th>
-                        <th name="fecha">Fecha</th>
-                        <th name="Cotizacion">archivo_cotizacion</th>
-                        <th name="estado">Estado</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                        
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-    
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>jaimeretamal47@gmail.com</td>
-                        <td>Santiago , Puente alto</td>
-                        <td>Sistema Automotriz</td>
-                        <td>29-06-2024</td>
-                        <td>BrunoFritch.xlsx</td>
-                        <td>Activo</td>
-                    </tr>
-                </tfoot>
-            </table>
+            
+                {% if campos %}
+                <table  id="example" class="display" style="width:100%">
+                    <thead>
+                        <!--definir mis campos para el crud (nombre , direccion , email, Sistema_descripcion,fecha , estado , opciones )-->
+                        <tr>
+                            <th >Nombre_Cliente</th>
+                            <th >Email_Cliente</th>
+                            <th >Direccion</th>
+                            <th >Sistema_Descripcion</th>
+                            <th >Fecha</th>
+                            <th >archivo_cotizacion</th>
+                            <th >Estado</th>
+                             <th>hora</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                       {% for dato in campos  %}
+                            <tr>
+                                <td>{{campos[0]}}</td>
+                                <td >{{campos[1]}}</td>
+                                <td>{{campos[2]}}</td>
+                                <td>{{campos[3]}}</td>
+                                <td>{{campos[4]}}</td>
+                                <td>{{campos[5]}}</td>
+                                <td>{{campos[6]}}</td>
+                                <td>{{campos[7]}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                {% else %}
+                <p>no hay datos</p>
+                {%  endif %}
+            
         </div>
     </div>
 
