--- a/templates/modulo_formulario_administrativo.html
+++ b/templates/modulo_formulario_administrativo.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>modulo cotizador</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css'  ) }}">
-    
 </head>
 <body>
-
-
     <div class="wrapper">
         <aside id="sidebar">
+
+            
+
             <div class="d-flex">
                 <button id="toggle-btn" type="button">
                     <?xml version="1.0" encoding="utf-8"?>
@@ -188,97 +188,61 @@
 
         </aside>
 
-        <div class="contenedor">
+       <div class="contenedor">
             <header class="header">
 
             </header>
 
        </div>
 
-        <div class="main">
-
-            
-        </div>
-
-        <div class="contabilidad">
-
-
-            <h3 class="btn btn-dark" style="width: 20%; position: relative; top: 10%; margin-left: 37%; left: 30px;">Cotizacion</h3>
-            <table class="table table-dark table-hover" style="position: relative; top: 250px; width: 1100px; left: 150px; ">
-    
-                <button  id="exportar" class="btn btn-dark">Descargar
-                </button>
-                
-    
-                <script src="{{ url_for('static', filename='script/readCsv.js') }}" type="module"></script>
-               
-                
-                <form  action="modulo_cotizador.html" method="POST"  id="form" target="_blank" enctype="multipart/form-data">
-                
-                    <input id="tabla" name="archivo" type="file">
-    
-                    <div id="imagen"></div>
-                    
-                    <input id="enviar" name="enviar" type="submit" value="Enviar" class="btn btn-primary" >
-                </form>
-                  
-                  
-                  
-                <script type="text/javascript"
-                src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    
-                <script type="text/javascript">
-                emailjs.init('lcAIcpNR6vvfLZoym')
-                </script>
-    
-                <!--h4>id="csv-upload-form"</h4-->
-                
-    
-                <thead  id="tabla_excel" hidden>
-                  <tr>
-                    <th id="id" scope="col">id</th>
-                    <th id="nombre" scope="col">Nombre</th>
-                    <th id="apellido" scope="col">Apellido</th>
-                    <th id="numero" scope="col">Celular</th>
-                    <th id="cant_personas" scope="col">Cant_personas</th>
-                    <th id="tipo_evento">tipo Evento</th>
-                    <th id="fecha" scope="col">Fecha</th>
-                    <th id="monto" scope="col">Monto</th>
-                  </tr>
+       <div class="crud">
+            <table class="display" style="width:100%">
+                <thead>
+                <tr>
+                    <th scope="col">nombre</th>
+                    <th scope="col">apellido</th>
+                    <th scope="col">tipo_evento</th>
+                    <th scope="col">contacto</th>
+                    <th scope="col">direccion</th>
+                    <th scope="col">email</th>
+                    <th scope="col">fecha</th>
+                    <th scope="col">hora</th>
+                </tr>
                 </thead>
-    
-    
-                <tbody class="table-group-divider">
+                <tbody>
+                <tr>
+                    {% for item in row%}
                     
-                    
+                    <td>{{item[0]}}</td>
+                    <td>{{item[1]}}</td>
+                    <td>{{item[2]}}</td>
+                    <td>{{item[3]}}</td>
+                    <td>{{item[4]}}</td>
+                    <td>{{item[5]}}</td>
+                    <td>{{item[6]}}</td>
+                    <td>{{item[7]}}</td>
+
+                    {% endfor %}
+                </tr>
+                
+                
                 </tbody>
             </table>
-    
+
+
+
+          <div class="position-absolute top-50 start-50" >
+            <button type="button" class=" btn btn-primary">Add</button>
+          </div>
+
         </div>
-
+    
     </div>
-
-    
-
-    <!--script src="https://smtpjs.com/v3/smtp.js"></script-->
-
-    <!--script src="{{ url_for('static', filename='script/enviarExcel.js') }}" type="module"></script-->
-
-    <script src="{{ url_for('static', filename='script/exportExcel.js') }}"></script>
-    <script src="{{ url_for('static', filename='script/xlsx.full.min.js') }}"></script>
-    
-    <script src="{{ url_for('static', filename='script/fileSaver.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='script/tableexport.min.js') }}"></script>
 
     <script src="{{ url_for('static', filename='script/dashboard.js') }}"></script>
 
-    <script src="{{ url_for('static', filename='script/sweetalert.min.js') }}"></script>
-
-
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
  
-    
+
 </body>
 </html>
