--- a/static/index.css
+++ b/static/index.css
@@ -302,17 +302,16 @@
   display: flex;
   width: 100%;
   justify-content: space-around;
-  padding: 50px;
-  margin-left: 2px;
+  margin-right: 550px;
+ 
 }
 
 .fondo .comedor .centrado .tipo {
   width: 200px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 50px;
-  margin-left: 35px;
+  margin-right: 80px;
   
   
 }
@@ -431,8 +430,9 @@
 .formulario {
   position: relative;
   top: 110px;
-  width: 1350px;
+  width: 1200px;
   height: 100vh;
+  background-color: #F7F7F7;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   overflow: hidden;
@@ -633,7 +633,7 @@ position:relative;
 
 .box {
   width: 100%;
-  height: 300px;
+  height: 600px;
   margin: 5%;
 
 }
@@ -641,6 +641,8 @@ position:relative;
 .box #accordion {
   justify-content: center;
   margin-left: 20%;
+  position: relative;
+  top: 25px;
   padding: 25px;
   margin-left: 5px;
 }
@@ -708,7 +710,7 @@ position:relative;
 }
 
 .contenedor_carusel {
-  height: 800px;
+  height: 900px;
   width: 100%;
   border: 1px solid black;
 }
@@ -740,12 +742,12 @@ position:relative;
   display: flex;
   align-items: center;
   width: fit-content;
-  height: 304px;
+  height: 350px;
   padding: 10px 0px;
   margin: 0px auto;
   max-width: 90vw;
   overflow: hidden;
-  top: 100px;
+  top: 200px;
 }
 
 .slick-track {
@@ -755,20 +757,22 @@ position:relative;
   display: flex;
   justify-content: center;
   transition: .5s ease-in-out;
+  height: 400px;
 
 }
 .slick {
   position: relative;
-  width: 300px;
+  width: 550px;
   padding: 0 10px;
   float: left;
   box-sizing: border-box;
   display: flex;
-  height: 100%;
+  height: 200px;
 }
 
 .slick h4 {
   position: absolute;
+  top: 270px;
   z-index: 1;
   font-size: 22px;
   line-height: 23px;
@@ -784,7 +788,7 @@ position:relative;
 
 .slick a img {
   object-fit: cover;
-  height: 300px;
+  height: 420px;
   width: 100%;
   border-radius: 4px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
