--- a/templates/index.html
+++ b/templates/index.html
@@ -66,10 +66,13 @@
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                       <a id="link" class="navbar-brand" href="#">Nosotros</a>
+                      <a id="link" class="navbar-brand" href="#">Nuestras Funcionalidades</a>
                       <a id="link" class="navbar-brand" aria-current="page" href="http://localhost:5000/dashboard.html">Portal_Cotizadores</a>
                       <a id="link" class="navbar-brand" href="http://localhost:5000/adminDashboard.html">Portal_Admin</a>
                       <a id="link" class="navbar-brand" href="http://localhost:5000/portalPago.html">PortalFactura</a>
                       <a id="link" class="navbar-brand" href="#">Contacto</a>
+                      <a id="link" class="navbar-brand" href="#">Galeria</a>
+
                     </div>
                   </div>
                 </div>
@@ -143,7 +146,7 @@
 
                 <div class="targeta simple">
                     <div class="simple__estructura">
-                        <p>ofrecer un servicio de mejora continua para el sistema de eventos productivos empresariales
+                        <p>Ofrecemos un servicio de plataforma digital  para distintos negocios empresariales
                         </p>
                         <div class="descripcion">
 
@@ -160,19 +163,19 @@
 
         <div class="conten_mision">
 
-            <h3 class="btn btn-outline-secondary" style="width: 10%; position: relative; top: 10%; margin-left: 37%; right: 210px;">Mision</h3>
-            <div class="card" style="width: 25rem; position: relative; top: 130px; left: 350px; margin: 10px;">
-                <img src="{{url_for('static', filename='img/mision2023.jpg')}}" class="card-img-top" alt="...">
+            <h3 class="btn btn-dark" style="width: 10%; position: relative; top: 7%; margin-left: 25%;">Mision</h3>
+            <div class="card" style="width: 25rem; position: relative; top: 80px; left: 350px; margin: 10px;">
+                <img src="{{url_for('static', filename='img/mision2024.png')}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text" style="font-size: 25px;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text" style="font-size: 25px;">Ofrecemos servicio de una plataforma digital para la interaccion con el cliente para diferentes negocios , impulsamos lo mejor para lograr este objetivo y crear nuevos negocios para el futuro.</p>
                 </div>
             </div>
 
-            <h3 class="btn btn-outline-secondary" style="width: 10%; position: relative; bottom: 65%; margin-left: 37%; left: 520px;">vision</h3>
-            <div class="card" style="width: 25rem; position: relative; bottom: 400px; left: 1100px; margin: 10px;">
-                <img src="{{url_for('static', filename='img/mision2023.jpg')}}" class="card-img-top" alt="...">
+            <h3 class="btn btn-dark" style="width: 10%; position: relative; bottom: 73%; margin-left: 67%;">Vision</h3>
+            <div class="card" style="width: 25rem; position: relative; bottom: 550px; left: 1100px; margin: 10px;">
+                <img src="{{url_for('static', filename='img/vision.png')}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text" style="font-size: 25px;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text" style="font-size: 25px;">Potenciar la creacion de servicios para la tranformacion digital para distintos negocios , facilitar el acceso de comunicacion con el cliente.</p>
                 </div>
             </div>
 
