--- a/templates/index.html
+++ b/templates/index.html
@@ -82,12 +82,13 @@
 
         <div class="contenedor_nosotros">
         
-        <img src="{{url_for('static', filename='img/nosotros2.png')}}" class="img_nosotros">
+        <img src="{{url_for('static', filename='img/td.png')}}" class="img_nosotros">
 
-        <p class="letra">TecnoEvent</p>
+        <p class="letra">SDXC</p>
 
         <div class="contenedor_texto">
-            <p class="texto_letra">Ven a Conocer Nuestras Distintas Categorias de Eventos </p>
+            <p class="texto_letra">Conoce Nuestra plataforma digital para multiples negocios ,
+             creemos en el futuro y en el cambio de la tranformacion digital.</p>
         </div>
 
 
