--- a/templates/index.html
+++ b/templates/index.html
@@ -23,28 +23,19 @@
 
 <body>
     
-
+    
     <div class="container_slider">
-      
-        <div class="slider">    
+   
 
-            <div class="slide" style="text-align: center; width: 100%; opacity: 0.8; padding: 310px 50px; height: 90%; position: relative; background-size: cover; background-image: url('/static/img/tecnologia.png');">
+        <video src="{{url_for('static', filename='img/istockphoto-1287601917-640_adpp_is.mp4')}}" autoplay loop muted controls></video>
+    
+            <!--div class="slide" style="text-align: center; width: 100%; opacity: 0.8; padding: 310px 50px; height: 90%; position: relative; background-size: cover; background-image: url('/static/img/tecnologia.png');">
                 <p style="font-size: 75px; font-family: 'Lucida Bright'; position: relative; bottom: 120px; color:  #E5E5F9 ;"> el cambio somos nosotros para la calidad de negocio</p>
             </div>
 
             <div class="slide1" style="text-align: center; width: 100%;  opacity: 0.8; padding: 310px 50px; height: 80%; position: relative; background-size: cover; background-image: url('/static/img/tecnologia.png');">
                 <p style="font-size: 75px; font-family: 'Lucida Bright'; position: relative; bottom: 120px; color: #E5E5F9 ;"> el cambio somos nosotros para la calidad de negocio</p>
-            </div>
-
-            <div class="slide2" style="text-align: center; width: 100%;  opacity: 0.8; padding: 310px 50px; height: 80%; position: relative; background-size: cover; background-image: url('/static/img/tecnologia.png');">
-                <p style="font-size: 75px; font-family: 'Lucida Bright'; position: relative; bottom: 120px; color:  #E5E5F9 ;"> el cambio somos nosotros para la calidad de negocio</p>
-            </div>
-
-            <div class="slide3" style="text-align: center; width: 100%;  opacity: 0.8; padding: 310px 50px; height: 80%; position: relative; background-size: cover; background-image: url('/static/img/tecnologia.png');">
-                <p style="font-size: 75px; font-family: 'Lucida Bright'; position: relative; bottom: 120px; color:  #E5E5F9 ;">el cambio somos nosotros para la calidad de negocio</p>
-            </div>
-        
-        </div>
+            </div-->
 
     </div>
 
@@ -584,7 +575,7 @@
     
     <!--script src="https://smtpjs.com/v3/smtp.js"></script-->
 
-    <script src="{{ url_for('static', filename='script/enviarExcel.js') }}" type="module"></script>
+    <!--script src="{{ url_for('static', filename='script/enviarExcel.js') }}" type="module"></script-->
 
     <!--script src="{{ url_for('static', filename='script/blobManager.js') }}" type="module"></script-->
 
@@ -629,7 +620,7 @@
     <script src="{{ url_for('static', filename='script/post.js') }}"></script>
 
     
-    <script src="{{ url_for('static', filename='script/exportExcel.js') }}"></script>
+    <!--script src="{{ url_for('static', filename='script/exportExcel.js') }}"></script-->
     
    
 
