--- a/templates/adminDashboard.html
+++ b/templates/adminDashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Admin</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='adminDashboard.css'  ) }}">
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
@@ -18,9 +19,7 @@
 
         <header class="header">
             <div class="menu-icon">
-                <button id="button" type="submit" onclick="getData()"  style="margin-left: 1300px; color: white; background-color: darkgreen; position: relative; top: 120px; width: 150px; height: 50px;">
-                    GRAFICOS INTERACTIVO
-                </button>
+                
             </div>
 
         </header>
@@ -44,12 +43,81 @@
                       <span>Admin Dashboard</span>
                   </a>
               </li>
-          </ul>
 
+              <li class="sidebar-item">
+                <a href="/index.html" class="sidebar-link">
+                  <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                  <svg fill="#1C2033" width="52" height="52" version="1.1" id="lni_lni-exit-up" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                      y="0px" viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+                  <g>
+                      <path d="M57.5,29.1h-6.9c-1.2,0-2.2,1-2.2,2.2s1,2.3,2.2,2.3h6.9c0.2,0,0.3,0.1,0.3,0.3v11.3c0,2.4-1.9,4.3-4.3,4.3H10.6
+                          c-2.4,0-4.3-1.9-4.3-4.3V33.9c0-0.2,0.1-0.3,0.3-0.3h6.9c1.2,0,2.2-1,2.2-2.3s-1-2.2-2.2-2.2H6.5c-2.6,0-4.8,2.2-4.8,4.8v11.3
+                          c0,4.9,4,8.8,8.8,8.8h42.9c4.9,0,8.8-4,8.8-8.8V33.9C62.2,31.3,60.1,29.1,57.5,29.1z"/>
+                      <path d="M23.4,23.9l6.4-6.3v17.9c0,1.2,1,2.2,2.2,2.2c1.2,0,2.2-1,2.2-2.2V17.7l6.3,6.2c0.4,0.4,1,0.6,1.6,0.6
+                          c0.6,0,1.2-0.2,1.6-0.7c0.9-0.9,0.9-2.3,0-3.2l-10.2-10c-0.9-0.9-2.3-0.9-3.2,0l-10.2,10c-0.9,0.9-0.9,2.3,0,3.2
+                          C21.1,24.7,22.5,24.7,23.4,23.9z"/>
+                  </g>
+                  </svg>
+                  <span>Cerrar Sesion</span>
+                </a>
+            </li>
+            </ul>
           </div>
         </aside>
 
+        
+
         <main class="main-container">
+
+          <div class="row">
+              <div class="col-12 col-md-4">
+                <div class="card border-0">
+                    <div class="card-body py-4">
+                        <h5 class="mb-2 fw-bold">
+                            Menbers progress
+                        </h5>
+                        <p class="mb-2 fw-bold">
+                            $72,540
+                        </p>
+                        <div class="mb-0">
+                            <span class="badge text-success me-2">
+                                +9,90
+                            </span>
+                            <span class="fw-bold">
+                                Since Last Mont
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="card border-0">
+                    <div class="card-body py-4">
+                        <h5 class="mb-2 fw-bold">
+                            Menbers progress
+                        </h5>
+                        <p class="mb-2 fw-bold">
+                            $72,540
+                        </p>
+                        <div class="mb-0">
+                            <span class="badge text-success me-2">
+                                +9,90
+                            </span>
+                            <span class="fw-bold">
+                                Since Last Mont
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button id="button" type="submit" onclick="getData()"  style="margin-left: 200px;  color: white; background-color: darkgreen; position: relative; top: 80px; width: 150px; height: 50px;">
+              GRAFICOS INTERACTIVO
+            </button>
+          </div>
+
             <h1 class="chart">
             Admin Dashboard
             </h1>
