presupuesto modulo html y js

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
+                      <!--a id="link" class="navbar-brand" href="http://localhost:5000/presupuesto.html">Presupuesto</a-->
                       <a id="link" class="navbar-brand" href="#">Nosotros</a>
                       <a id="link" class="navbar-brand" href="#">Nuestras Funcionalidades</a>
                       <a id="link" class="navbar-brand" aria-current="page" href="http://localhost:5000/dashboard.html">Portal_Cotizadores</a>
@@ -251,7 +252,7 @@
     
    <div class="contenedor_carusel">
         <div class="carusel">
-            <h2 class="btn btn-dark" style="width: 15%; position: relative; top: 70px; margin-left: 720px;">Galeria de Eventos</h2>
+            <h2 class="btn btn-dark" style="width: 15%; position: relative; top: 70px; margin-left: 720px;">Galeria</h2>
           <div class="slick-list" id="slick-list">
             <button class="slick-arrow slick-prev"  id="button-prev">
                 <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
@@ -264,7 +265,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Clasico</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -276,7 +277,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Premiun</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -288,7 +289,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Clasico</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -300,7 +301,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Premiun</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -312,7 +313,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Clasico</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -324,7 +325,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Premiun</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -336,7 +337,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Premiun</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -348,7 +349,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Clasico</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -360,7 +361,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Premiun</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -372,7 +373,7 @@
                         <a href="">
                             <h4><small>
                                 Cliente: xxxxxxx
-                            </small>Evento Clasico</h4>
+                            </small></h4>
                             <picture>
                                 <img src="/static/img/evento.png" alt="Image">
                             </picture>
@@ -432,7 +433,7 @@
                 <svg fill="#1C2033" width="52" height="52" viewBox="0 0 512 512">
                  <path d="M512 416c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96C0 60.7 28.7 32 64 32l128 0c20.1 0 39.1 9.5 51.2 25.6l19.2 25.6c6 8.1 15.5 12.8 25.6 12.8l160 0c35.3 0 64 28.7 64 64l0 256zM232 376c0 13.3 10.7 24 24 24s24-10.7 24-24l0-64 64 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-64 0 0-64c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 64-64 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l64 0 0 64z"/>
                 </svg>
-                <input type="text" name="tipo_evento" id="tipo_evento" class="form-control" placeholder="Ingrese su Tipo de evento">
+                <input type="text" name="tipo_evento" id="tipo_evento" class="form-control" placeholder="Ingrese su Tipo de solicitud">
                 <br>
                 <br>
                 <svg fill="#1C2033" width="52" height="52" viewBox="0 0 384 512">
