--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         
         <header>
             <nav class="nav">
-              <a href="http://localhost:5000/login.html" class="nav_logo">TecnoEvent</a>
+              <a href="http://localhost:5000/login.html" class="nav_logo">SDXC</a>
                 <!--ul class="nav_items">
                     <li class="nav_item">
                         <a href="http://localhost:5000/index.html" class="nav_link">Inicio</a>
