--- a/templates/portalPago.html
+++ b/templates/portalPago.html
@@ -29,16 +29,16 @@
             <ul class="list-group mb-3">
               <li class="list-group-item d-flex justify-content-between lh-condensed">
                 <div>
-                  <h6 class="my-0" id="contenido_variable">SISTEMA  COTIZACION : </h6>
-                  <small class="text-muted" id="contenido_variable">DESCRIPCION : Sistema Hipotecario u Sistema Automotriz</small>
+                  <h6 class="my-0" id="contenido_variable">ticket de solicitud : </h6>
+                  <small class="text-muted" id="contenido_variable">descripcion de solicitud : </small>
                 </div>
-                <span class="text-muted" id="contenido_variable">$2.500.000</span>
+                <span class="text-muted" id="contenido_variable">$</span>
               </li>
               
               
               <li class="list-group-item d-flex justify-content-between">
                 <span id="contenido_variable">Total (CLP)</span>
-                <strong id="contenido_variable">$3.700.000</strong>
+                <strong id="contenido_variable">$</strong>
                 <form class="card p-2">
                   <div class="input-group">
                     <button type="submit" class="btn btn-secondary"  id="boton_comprar">
@@ -78,12 +78,10 @@
               </div>
       
               <div class="mb-3">
-                <label for="username" id="contenido_variable">Nombre de usuario</label>
+                <label for="username" id="contenido_variable">Tipo de solicitud</label>
                 <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">@</span>
-                  </div>
-                  <input type="usuario" class="form-control" name="usuario" placeholder="Username" required>
+                  
+                  <input type="usuario" class="form-control" name="usuario" placeholder="tipo de solicitud" required>
                   <div class="invalid-feedback" style="width: 100%;">
                     Your username is required.
                   </div>
