--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,9 @@
                       <!--a id="link" class="navbar-brand" href="http://localhost:5000/presupuesto.html">Presupuesto</a-->
                       <a id="link" class="navbar-brand" href="#">Nosotros</a>
                       <a id="link" class="navbar-brand" href="#">Nuestras Funcionalidades</a>
-                      <a id="link" class="navbar-brand" aria-current="page" href="http://localhost:5000/dashboard.html">Portal_Cotizadores</a>
+                      <a id="link_cotizador" class="navbar-brand" aria-current="page" href="http://localhost:5000/dashboard.html">Portal_Cotizadores</a>
                       <a id="link" class="navbar-brand" href="http://localhost:5000/adminDashboard.html">Portal_Admin</a>
+                      <a id="link" class="navbar-brand" aria-current="page" href="http://localhost:5000/chatbot.html">Chatbot</a>
                       <a id="link" class="navbar-brand" href="http://localhost:5000/portalPago.html">PortalFactura</a>
                       <a id="link" class="navbar-brand" href="#">Contacto</a>
                       <a id="link" class="navbar-brand" href="#">Galeria</a>
@@ -451,7 +452,7 @@
                 <svg fill="#1C2033" width="52" height="52" viewBox="0 0 512 512">
                 <path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/>
                 </svg>
-                <input type="email" name="email" id="Email" value="@gmail.com" class="form-control" placeholder="Ingrese su Email">
+                <input type="email" name="email" id="Email"  class="form-control" placeholder="Ingrese su Email">
                 <br>
                 <br>
                 <input id="submit" type="submit" class="btn btn-primary" style="width: 15%; position: relative; bottom: 7%;">
